--- a/templates/home.html
+++ b/templates/home.html
@@ -14,28 +14,28 @@
         <div class="home-profile">
             <div class="home-leader">
                <a href="#"> <i class="icon icon-trophy">&nbsp;</i>
-                   <span class="leader">Leaderboard</span></a>
+                   <div class="leader">Leaderboard</div></a>
             </div>
             <div class="home-people">
                <a href="#"><i class="icon icon-people">&nbsp;</i>
-                   <span class="my-profile">My profile</span></a>
+                   <div class="my-profile">My profile</div></a>
             </div>
         </div>
         <hr class="home-divid">
         <div class="home-socials">
             <div class="home-fb">
                <a href="#"> <i class="icon icon-fb"></i>
-                   <span class="home-fb1">Facebook</span></a>
+                   <div class="home-fb1">Facebook</div></a>
 
             </div>
             <div class="home-twit">
                <a href="#"> <i class="icon icon-twit"></i>
-                   <span class="home-twit1">Twitter</span></a>
+                   <div class="home-twit1">Twitter</div></a>
 
             </div>
             <div class="home-post">
                 <a href="#"><i class="icon-post"></i>
-                <span class="home-post1"> Create Post</span>
+                <div class="home-post1"> Create Post</div>
                 </a>
             </div>
         </div>
