--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,6 +5,9 @@
                 Profile
             </div>
             <hr class="vertical-title">
+            <div class="prf-gear">
+                <i class="icon ion-gear-a"></i>
+            </div>
             <div class="profile-name">
                 <p>Lauren Paul</p>
             </div>
