--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -6,8 +6,10 @@
         </div>
         <div class="img-profile">
             <div class="pic-edit">
-                <img class="abc" src="img/profilepic.jpg">
-                <h5 class="picsupload">Upload Picture</h5>
+                <div class="abc">
+                    <img src="img/profilepic.jpg">
+                </div>
+                <div class="picsupload">Upload Picture</div>
             </div>
         </div>
         <div class="edit-cont">
