--- a/templates/profile.html
+++ b/templates/profile.html
@@ -1,12 +1,25 @@
 <ion-view class="bgprofile title-main">
+    <ion-nav-bar class="bgtrans">
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+        <ion-nav-buttons side="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor" menu-toggle="left">
+            </button>
+        </ion-nav-buttons>
+        <div class="titlemain">
+            Profile
+            <hr class="vertical-title">
+        </div>
+        <ion-nav-buttons side="right">
+            <button class="button button-icon button-clear ion-gear-a menu-btncolor">
+            </button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
     <ion-content class="no-header">
         <div class="profile-cont">
             <div class="titlemain">
                 Profile
-            </div>
-            <hr class="vertical-title">
-            <div class="prf-gear">
-                <i class="icon ion-gear-a"></i>
+                <hr class="vertical-title">
             </div>
             <div class="profile-name">
                 <p>Lauren Paul</p>
@@ -17,24 +30,25 @@
                 </div>
             </div>
             <div class="profile-contmain">
-                <div class="rank-score">
+                <p class="rank-score">
                     <span class="ranks">Rank <span class="score"> 1 </span>
                     <span class="scores"> Score : <span class="score">105</span>
-                </div>
-                <div class="email-gen">
+                </p>
+                <p class="email-gen">
                     <span class="email-prf">lauren.paul@gmail.com | 
                     </span> <span class="gend"> female</span>
-                </div>
-                <div class="dob-std">
+                </p>
+                <p class="dob-std">
                     <span class="dob-prf">dob:</span>
                     <span class="dob-title">28/04/1987 |</span>
                     <span class="std"> Studied at IBSR, Mumbai</span>
-                </div>
+                </p>
+                <div class="triangle"></div>
+                <div class="triangle1"></div>
             </div>
-            <div class="triangle"></div>
-            <div class="triangle1"></div>
         </div>
         <div class="triangle2"></div>
+        <div class="triangle3"></div>
         <div class="profile-cont1">
 
             <div class="all-profile">
