--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,26 +1,34 @@
 <ion-view>
+    <ion-nav-bar class="bgtrans">
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+        <ion-nav-buttons side="left">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor" menu-toggle="left">
+            </button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
     <ion-content>
         <div class="logo-center">
             <img src="img/logos.png">
         </div>
         <div class="land-content">
-<div class="headlanding">
-   <div class="button-stnd1">
-            <div class="button-tickfb">
-                <button class="button button-small button-light">
-                    Information
-                </button>
+            <div class="headlanding">
+                <div class="button-stnd1">
+                    <div class="button-tickfb">
+                        <button class="button button-small button-light">
+                            Information
+                        </button>
+                    </div>
+                    <div class="button-ticktwit">
+                        <button class="button button-small button-light">
+                            Login
+                        </button>
+                    </div>
+                </div>
+                <h5>Lorem Ipsum Lorem Ipsum</h5>
+                <h5>Lorem Ipsum Lorem Ipsum</h5>
             </div>
-            <div class="button-ticktwit">
-                <button class="button button-small button-light">
-                    Login
-                </button>
-            </div>
-        </div>
-    <h5>Lorem Ipsum Lorem Ipsum</h5>
-    <h5>Lorem Ipsum Lorem Ipsum</h5>
-</div>
-       <img src="img/college-kids.jpg">
+            <img src="img/college-kids.jpg">
         </div>
     </ion-content>
 </ion-view>
