--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -1,4 +1,20 @@
-<ion-view title="Suggest Post">
+<ion-view title="">
+    <ion-nav-bar class="bgtrans">
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+        <ion-nav-buttons side="left" class="border-color">
+            <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
+            </button>
+        </ion-nav-buttons>
+        <div class="head-lead">
+            Suggest Post
+            <hr class="verticalup">
+        </div>
+        <ion-nav-buttons side="right">
+            <button class="button button-icon button-clear ion-close post-icon blue">
+            </button>
+        </ion-nav-buttons>
+    </ion-nav-bar>
     <ion-content>
         <div class="suggest">
             <label class="item item-input fb-twt">
@@ -7,17 +23,22 @@
                 <i class="ion-social-twitter"></i>
             </label>
             <label class="item item-input img">
-                <input type="text" placeholder="text">
+                <input type="text" placeholder="Text">
+            </label>
+            <label class="item item-input img">
+                <input type="text" placeholder="Links">
             </label>
             <label class="item item-input image-sugest">
-                image
+                Image
                 <button class="button button-small imgset">
                     Choose File
                 </button>
             </label>
-            <button class="button button-small button-positive savebtn">
-                Save
-            </button>
+            <div class="btn-save">
+                <button class="button button-small button-positive savebtn">
+                    Save
+                </button>
+            </div>
         </div>
     </ion-content>
 </ion-view>
