--- a/templates/editprofile.html
+++ b/templates/editprofile.html
@@ -8,8 +8,9 @@
             <div class="pic-edit">
                 <div class="abc">
                     <img src="img/profilepic.jpg">
+                    <div class="picsupload"><a href="#">Upload Picture</a>
+                    </div>
                 </div>
-                <div class="picsupload">Upload Picture</div>
             </div>
         </div>
         <div class="edit-cont">
