--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -1,6 +1,6 @@
 <ion-view class="bg-leader">
     <ion-nav-bar class="bgtrans">
-        <ion-nav-back-button>
+        <ion-nav-back-button class="blue">
         </ion-nav-back-button>
         <ion-nav-buttons side="left" class="border-color">
             <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
