--- a/templates/post.html
+++ b/templates/post.html
@@ -1,7 +1,7 @@
 <ion-view>
     <ion-content class="no-header leader-cont">
         <ion-nav-bar class="bgtrans">
-            <ion-nav-back-button>
+            <ion-nav-back-button class="green">
             </ion-nav-back-button>
             <ion-nav-buttons side="left" class="border-color">
                 <button class="button button-icon button-clear ion-navicon menu-btncolor green" menu-toggle="left">
