--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -1,6 +1,6 @@
 <ion-view>
     <ion-nav-bar class="bgtrans" title="Createpost" class="leader-cont">
-        <ion-nav-back-button>
+        <ion-nav-back-button class="blue">
         </ion-nav-back-button>
         <ion-nav-buttons side="left">
             <button class="button button-icon button-clear ion-navicon menu-btncolor green blue" menu-toggle="left">
